<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/moviebg"
    android:alpha="0.83"
    tools:context=".SignupFragment">

<!--  This creates a guideline to divide the screen by the percentage  -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linear_layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="15dp"
            android:background="@drawable/lavender_border">

            <TextView
                android:id="@+id/signup_txtview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jacques_francois_shadow"
                android:text="@string/signup_txt"
                android:textAlignment="center"
                android:textColor="@color/lavender"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/signup_email_edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/lavender_border"
                android:layout_marginTop="30dp"
                android:padding="8dp"
                android:hint="Email"
                android:drawableLeft="@drawable/ic_baseline_email_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/signup_username_edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/lavender_border"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="Username"
                android:drawableLeft="@drawable/ic_baseline_person_pin_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/signup_password_edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/lavender_border"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="Password"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/genres_txtview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jacques_francois_shadow"
                android:text="@string/genres_txt"
                android:textSize="20sp"
                android:textColor="@color/lavender"
                android:textAlignment="center"
                android:layout_marginTop="30dp" />

            <LinearLayout
                android:id="@+id/linear_layout_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/gcheckBox1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/actiongenre_txt" />

                <CheckBox
                    android:id="@+id/gcheckBox2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/adventuregenre_txt" />

                <CheckBox
                    android:id="@+id/gcheckBox3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/animationgenre_txt" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/gcheckBox4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/biographicalgenre_txt" />

                <CheckBox
                    android:id="@+id/gcheckBox5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/comedygenre_txt" />

                <CheckBox
                    android:id="@+id/gcheckBox6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/crimegenre_txt" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/gcheckBox7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/documentarygenre_txt" />

                <CheckBox
                    android:id="@+id/gcheckBox8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dramagenre_txt" />

                <CheckBox
                    android:id="@+id/gcheckBox9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/familygenre_txt" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/gcheckBox10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fantasygenre_txt" />

                <CheckBox
                    android:id="@+id/gcheckBox11"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/historicalgenre_txt" />

                <CheckBox
                    android:id="@+id/gcheckBox12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/horrorgenre_txt" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/gcheckBox13"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/musicalgenre_txt" />

                <CheckBox
                    android:id="@+id/gcheckBox14"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mysterygenre_txt" />

                <CheckBox
                    android:id="@+id/gcheckBox15"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/romancegenre_txt" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/gcheckBox16"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sciencefictiongenre_txt" />

                <CheckBox
                    android:id="@+id/gcheckBox17"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sportsgenre_txt"/>

                <CheckBox
                    android:id="@+id/gcheckBox18"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/superherogenre_txt" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/gcheckBox19"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/thrillergenre_txt"/>

                <CheckBox
                    android:id="@+id/gcheckBox20"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wargenre_txt" />

                <CheckBox
                    android:id="@+id/gcheckBox21"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/westerngenre_txt" />
            </LinearLayout>

            <!--  This is for the movie rating preferences  -->
            <LinearLayout
                android:id="@+id/linear_layout_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
            <TextView
                android:id="@+id/movierating_txtview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/jacques_francois_shadow"
                android:text="@string/movierating_txt"
                android:textSize="20sp"
                android:textColor="@color/lavender"
                android:textAlignment="center"
                android:layout_marginTop="30dp" />

            <ImageButton
                android:id="@+id/informationIconBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/info_icon" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/rcheckBox1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/generalrating_txt"/>

                <CheckBox
                    android:id="@+id/rcheckBox2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pgrating_txt" />

                <CheckBox
                    android:id="@+id/rcheckBox3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pg13rating_txt" />

                <CheckBox
                    android:id="@+id/rcheckBox4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rrating_txt" />

                <CheckBox
                    android:id="@+id/rcheckBox5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nc17rating_txt" />
            </LinearLayout>

            <!--  This is for the movie duration preferences  -->
            <TextView
                android:id="@+id/movieduration_txtview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jacques_francois_shadow"
                android:text="@string/movieduration_txt"
                android:textSize="20sp"
                android:textColor="@color/lavender"
                android:textAlignment="center"
                android:layout_marginTop="30dp" />

            <LinearLayout
                android:id="@+id/linear_layout_11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/dcheckBox1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/duration1_txt"/>

                <CheckBox
                    android:id="@+id/dcheckBox2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/duration2_txt" />

                <CheckBox
                    android:id="@+id/dcheckBox3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/duration3_txt" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/dcheckBox4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/duration4_txt" />

                <CheckBox
                    android:id="@+id/dcheckBox5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/duration5_txt" />

                <CheckBox
                    android:id="@+id/dcheckBox6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/duration6_txt" />
            </LinearLayout>

            <!--  This is for user's bio (optional)  -->
            <TextView
                android:id="@+id/bio_txtview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jacques_francois_shadow"
                android:text="@string/bio_txt"
                android:textSize="20sp"
                android:textColor="@color/lavender"
                android:textAlignment="center"
                android:layout_marginTop="30dp" />

            <EditText
                android:id="@+id/bio_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/lavender_border"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:hint="@string/bio_edttxt"
                android:inputType="textMultiLine"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/signup_complete_btn"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:text="@string/create_txt"
                android:textSize="35dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:background="@drawable/golden_border"
                android:layout_marginTop="30dp"
                app:backgroundTint="@null" />

        </LinearLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>