<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.83"
    android:background="@color/black"
    tools:context=".ProfileFragment">

    <View
        android:id="@+id/bioBorder"
        android:layout_width="438dp"
        android:layout_height="370dp"
        android:background="@color/white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <!--  Guideline to split the screen into two halves  -->

    <TextView
        android:id="@+id/username_txtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/lexend_bold"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@id/profilePic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="488dp"
        android:src="@drawable/defaultuser"
        app:layout_constraintBottom_toBottomOf="@+id/bioBorder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:text="@string/add_txt"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="@font/lexend_semibold"
        android:background="#0623C1"
        android:layout_marginStart="10dp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@id/rectangleView1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/profilePic"/>

    <Button
        android:id="@+id/block_btn"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:text="@string/block_txt"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="@font/lexend_semibold"
        android:background="@color/red"
        android:layout_marginEnd="10dp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@id/rectangleView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/profilePic" />

    <View
        android:id="@+id/rectangleView1"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginTop="10dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profilePic" />


    <TextView
        android:id="@+id/profile_bio_txtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/lexend_bold"
        android:text="BIO"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/rectangleView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rectangleView1" />


    <View
        android:id="@+id/rectangleView2"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_bio_txtview" />

    <!--  The second half of the screen  -->


    <TextView
        android:id="@+id/user_bio_txtview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/bioBorder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rectangleView2"
        app:layout_constraintVertical_bias="0.333" />

    <TextView
        android:id="@+id/profile_page_txtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/lexend_bold"
        android:text="@string/Activity_txt"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/moviesWatched_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/bioBorder"
        app:layout_constraintVertical_bias="0.307" />

    <Button
        android:id="@+id/moviesWatched_btn"
        android:layout_width="161dp"
        android:layout_height="80dp"
        android:layout_margin="20dp"
        android:background="@color/black"
        android:fontFamily="@font/lexend_semibold"
        android:text="@string/movies_watched_txt"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bioBorder"
        app:layout_constraintVertical_bias="0.242" />

    <Button
        android:id="@+id/watchlist_btn"
        android:layout_width="161dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        android:background="@color/black"
        android:fontFamily="@font/lexend_semibold"
        android:text="@string/watchlist_txt"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moviesWatched_btn" />

    <Button
        android:id="@+id/reviews_btn"
        android:layout_width="161dp"
        android:layout_height="80dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:background="@color/black"
        android:fontFamily="@font/lexend_semibold"
        android:text="@string/reviews_txt"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bioBorder" />

    <Button
        android:id="@+id/friends_btn"
        android:layout_width="161dp"
        android:layout_height="80dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="20dp"
        android:background="@color/black"
        android:fontFamily="@font/lexend_semibold"
        android:text="@string/friends_txt"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reviews_btn" />



</androidx.constraintlayout.widget.ConstraintLayout>
